2010-04-19  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::cat): Fast return for single array case.
	* Sparse.cc (Sparse<T>::cat): Ditto.

2010-04-19  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::cat): Miscellaneous fixes.
	* Sparse.cc (Sparse<T>::cat): Ditto.

2010-04-18  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::cat): New method.
	* Array.h: Declare it.
	* Sparse.cc (Sparse<T>::cat): New method.
	* Sparse.h: Declare it.

2010-04-16  David Bateman  <dbateman@free.fr>

	* Sparse.cc (template <class T> Sparse<T>::Sparse (const Array<T>&,
	const idx_vector&, const idx_vector&, octave_idx_type,
        octave_idx_type, bool, octave_idx_type)): Add argument defining the
	minimum storage to allocate for the sparse matrix.
	* Sparse.h (template <class T> Sparse (const Array<T>&,
	const idx_vector&, const idx_vector&, octave_idx_type,
        octave_idx_type, bool, octave_idx_type)): ditto.
	* MSparse.h : ditto
	* CSparse.h : ditto
	* dSparse.h : ditto
	* boolSparse.h : ditto

2010-04-14  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc: Update failing tests.

2010-04-13  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (Sparse<T>::index): If S is a sparse column vector,
	forward S(I,1) and S(I,:) to 1D indexing. Handle permutation indexing
	in the 1D case.
	(Sparse<T>::assign): If S is a sparse column vector,
	forward S(I,1) = X and S(I,:) =X to 1D indexed assignment.
	* idx-vector.cc (idx_vector::inverse_permutation): Add missing break.

2010-04-13  Jaroslav Hajek  <highegg@gmail.com>

	* Array-util.cc (gripe_invalid_assignment_size,
	gripe_assignment_dimension_mismatch): Move funcs here from Array.cc
	* Array-util.h: Declare them.
	* Array.cc: Remove them.

	* Sparse.cc (Sparse<T>::assign): New overloaded method.
	(Sparse<T>::operator =): Update.
	(Sparse<T>::resize1): Rewrite to match sparse assignment specifics.
	(Sparse<T>::set_index, Sparse<T>::clear_index, Sparse<T>::index_count,
	Sparse<T>::value): Remove methods.